--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
 
-    "build-css": "node-sass --include-path scss scss/desafio.scss css/desafio.css",
+    "build-css": "node-sass --include-path scss scss/miusuario.scss css/miusuario.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "author": "",
